--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -540,7 +540,7 @@
                   </div>
                 </div>
               </div>
-              <a href="#" class="site-btn">contact us</a>
+              <a href="contact.html" class="site-btn">contact us</a>
             </div>
           </div>
           <div class="col-lg-6">
