--- a/industryinc/contact.html
+++ b/industryinc/contact.html
@@ -284,7 +284,7 @@
 	<br>
 	<br>
 	<!-- Map section  -->
-	<h3 style="margin-bottom: 20px;"><center>Coorporate Office</center> </h3>
+	<h3 style="margin-bottom: 20px;"><center>UNIT 3 AND REGIONAL OFFICE</center> </h3>
 	<div class="map-section">
 		<div class="container">
 			<div class="map-info">
@@ -320,9 +320,9 @@
 			<!-- <img src="img/team/1.jpg" alt="" /> -->
 			<div class="member-info">
 			  <h3 style="font-size: 2rem; margin-bottom: 20px;">
-				Unit 3
+				COORPORATE OFFICE
 			  </h3>
-			  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522" style="border:0" width="100%" height="400px" allowfullscreen></iframe>
+			  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d827.7851293081002!2d82.97664982918906!3d25.30320721142792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDE4JzExLjUiTiA4MsKwNTgnMzcuOSJF!5e1!3m2!1sen!2sin!4v1596128973663!5m2!1sen!2sin" width="500" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 			  <!-- <a href="#" class="site-btn">See C.V.</a> -->
 			</div>
 		  </div>
