added product pages

--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -82,6 +82,55 @@
 
         margin-bottom: 10px;
       }
+      .header {
+        position: relative;
+        background-color: black;
+        height: 75vh;
+        min-height: 25rem;
+        width: 100%;
+        overflow: hidden;
+      }
+
+      .header video {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
+        z-index: 0;
+        -ms-transform: translateX(-50%) translateY(-50%);
+        -moz-transform: translateX(-50%) translateY(-50%);
+        -webkit-transform: translateX(-50%) translateY(-50%);
+        transform: translateX(-50%) translateY(-50%);
+      }
+
+      .header .container {
+        position: relative;
+        z-index: 2;
+      }
+
+      .header .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: black;
+        opacity: 0.5;
+        z-index: 1;
+      }
+
+      @media (pointer: coarse) and (hover: none) {
+        .header {
+          background: url("https://source.unsplash.com/XT5OInaElMw/1600x900")
+            black no-repeat center center scroll;
+        }
+        .header video {
+          display: none;
+        }
+      }
     </style>
   </head>
   <body>
@@ -153,8 +202,27 @@
     </header>
     <!-- Header section end  -->
 
+    <div class="header">
+      <video
+        playsinline="playsinline"
+        autoplay="autoplay"
+        muted="muted"
+        loop="loop"
+      >
+        <source src="videos/saaswad final.mp4" type="video/mp4" />
+      </video>
+      <div class="container h-100">
+        <div class="d-flex h-100 align-items-center">
+          <div class="w-100 text-white">
+            <h2>About us</h2>
+            <a href="#mission" class="site-btn">Discover</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Page top section  -->
-    <section
+    <!-- <section
       class="page-top-section"
       style="
         min-height: 100%;
@@ -175,7 +243,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Page top section end  -->
 
     <!-- About section -->
