--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -544,11 +544,8 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <div class="video-box set-bg" data-setbg="img/video-box.jpg">
-              <a
-                href="https://www.youtube.com/watch?v=wbnaHgSttVo"
-                class="video-popup"
-              >
+            <div class="video-box set-bg" data-setbg="img/video_thumbnail.png">
+              <a href="./videos/saaswad final.mp4" class="video-popup">
                 <i class="fa fa-play"></i>
               </a>
             </div>
