--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -214,7 +214,9 @@
       <div class="container h-100">
         <div class="d-flex h-100 align-items-center">
           <div class="w-100 text-white">
-            <h2>About us</h2>
+            <h2 style="font-weight: 300; color: #fff; margin-bottom: 25px;">
+              About us
+            </h2>
             <a href="#mission" class="site-btn">Discover</a>
           </div>
         </div>
