--- a/industryinc/contact.html
+++ b/industryinc/contact.html
@@ -67,6 +67,15 @@
 		  background-position: center;
 		  border: 1px solid;
 		}
+		.center_1 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70px;
+  height: 70px;
+  
+ 
+}
 	
 	  </style>
 
@@ -288,13 +297,8 @@
 	<div class="map-section">
 		<div class="container">
 			<div class="map-info">
-
-			
-
-			<center>	<img src="img/logo_saswadww.png" width="40px" height="40px" alt="">  </center>
-
-			
-				<p>
+			<center><img src="img/logo_saswad.png" height="50" alt="" /> </center>
+          <p>
 					<ul class="text-white">
 						
 						<li>SITUATED ON NH 19. EASY AND FAST TRANSPORTATION BY ROAD.</li>
@@ -307,7 +311,7 @@
 			</div>
 		</div>
 		<div class="map">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14431.335669906885!2d82.806947!3d25.2761718!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1ef670a29d928d79!2sSaaswad%20Heat%20Transfer%20%26%20Engineering%20Pvt%20Ltd!5e0!3m2!1sen!2sin!4v1595953386355!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14431.335669906885!2d82.806947!3d25.2761718!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1ef670a29d928d79!2sSaaswad%20Heat%20Transfer%20%26%20Engineering%20Pvt%20Ltd!5e0!3m2!1sen!2sin!4v1595953386355!5m2!1sen!2sin" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 		</div>
 	</div>
 	<div class="container"> 
@@ -320,9 +324,9 @@
 			<!-- <img src="img/team/1.jpg" alt="" /> -->
 			<div class="member-info">
 			  <h3 style="font-size: 2rem; margin-bottom: 20px;">
-				COORPORATE OFFICE
+				CORPORATE OFFICE
 			  </h3>
-			  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d827.7851293081002!2d82.97664982918906!3d25.30320721142792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDE4JzExLjUiTiA4MsKwNTgnMzcuOSJF!5e1!3m2!1sen!2sin!4v1596128973663!5m2!1sen!2sin" width="500" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+			  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d901.7580573579585!2d82.97673382918904!3d25.303121211428774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDE4JzExLjIiTiA4MsKwNTgnMzguMiJF!5e0!3m2!1sen!2sin!4v1596130190474!5m2!1sen!2sin" width="500" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 			  <!-- <a href="#" class="site-btn">See C.V.</a> -->
 			</div>
 		  </div>
@@ -334,7 +338,7 @@
 			  <h3 style="font-size: 2rem; margin-bottom: 20px;">
 				Unit 4
 			  </h3>
-			  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522" style="border:0" width="100%" height="400px" allowfullscreen></iframe>
+			  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3778.4387776008934!2d73.8533273145888!3d18.733928067504312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTjCsDQ0JzAyLjEiTiA3M8KwNTEnMTkuOSJF!5e0!3m2!1sen!2sin!4v1596130728365!5m2!1sen!2sin" width="500" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 			  <!-- <a href="#" class="site-btn">See C.V.</a> -->
 			</div>
 		  </div>
