--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -506,7 +506,7 @@
             <h2>We produce or supply Goods, Services, or Sources</h2>
           </div>
           <div class="col-lg-3 text-lg-right">
-            <a href="#" class="site-btn sb-dark">contact us</a>
+            <a href="contact.html#contact-form" class="site-btn sb-dark">contact us</a>
           </div>
         </div>
       </div>
@@ -540,7 +540,7 @@
                   </div>
                 </div>
               </div>
-              <a href="contact.html" class="site-btn">contact us</a>
+              <a href="contact.html#contact-form" class="site-btn">contact us</a>
             </div>
           </div>
           <div class="col-lg-6">
