--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -150,7 +150,7 @@
               <a href="solutions.html">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -506,7 +506,9 @@
             <h2>We produce or supply Goods, Services, or Sources</h2>
           </div>
           <div class="col-lg-3 text-lg-right">
-            <a href="contact.html#contact-form" class="site-btn sb-dark">contact us</a>
+            <a href="contact.php#contact-form" class="site-btn sb-dark"
+              >contact us</a
+            >
           </div>
         </div>
       </div>
@@ -540,7 +542,7 @@
                   </div>
                 </div>
               </div>
-              <a href="contact.html#contact-form" class="site-btn">contact us</a>
+              <a href="contact.php#contact-form" class="site-btn">contact us</a>
             </div>
           </div>
           <div class="col-lg-6">
@@ -565,7 +567,7 @@
               <li><a href="about.html">About us</a></li>
               <li><a href="solutions.html">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
         </div>
