--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -195,7 +195,7 @@
               <a href="solutions.html">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -442,7 +442,9 @@
             <h2>We produce or supply Goods, Services, or Sources</h2>
           </div>
           <div class="col-lg-3 text-lg-right">
-            <a href="contact.html#contact-form" class="site-btn sb-dark">contact us</a>
+            <a href="contact.php#contact-form" class="site-btn sb-dark"
+              >contact us</a
+            >
           </div>
         </div>
       </div>
@@ -459,7 +461,7 @@
               <li class="active"><a href="about.html">About us</a></li>
               <li><a href="solutions.html">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
         </div>
