--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -223,7 +223,7 @@
               <a href="solutions.html">Products</a>
             </li>
             <li class="active"><a href="blog.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -758,7 +758,9 @@
             <h2>We produce or supply Goods, Services, or Sources</h2>
           </div>
           <div class="col-lg-3 text-lg-right">
-            <a href="contact.html#contact-form" class="site-btn sb-dark">contact us</a>
+            <a href="contact.php#contact-form" class="site-btn sb-dark"
+              >contact us</a
+            >
           </div>
         </div>
       </div>
@@ -775,7 +777,7 @@
               <li><a href="about.html">About us</a></li>
               <li><a href="solutions.html">Products</a></li>
               <li class="active"><a href="blog.html">Facilities</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
         </div>
