--- a/industryinc/tacooler.html
+++ b/industryinc/tacooler.html
@@ -137,7 +137,7 @@
               <a href="solutions.html">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -183,7 +183,7 @@
               <li class="active"><a href="about.html">About us</a></li>
               <li><a href="solutions.html">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
         </div>
