--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -220,7 +220,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.html">Products</a>
+              <a href="solutions.php">Products</a>
             </li>
             <li class="active"><a href="blog.html">Facilities</a></li>
             <li><a href="contact.php">Contact</a></li>
@@ -775,7 +775,7 @@
             <ul class="footer-menu text-center">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
-              <li><a href="solutions.html">Products</a></li>
+              <li><a href="solutions.php">Products</a></li>
               <li class="active"><a href="blog.html">Facilities</a></li>
               <li><a href="contact.php">Contact</a></li>
             </ul>
