--- a/industryinc/elements.html
+++ b/industryinc/elements.html
@@ -82,7 +82,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.html">Solutions</a>
+              <a href="solutions.php">Solutions</a>
               <ul class="sub-menu">
                 <li><a href="elements.html">Elements</a></li>
               </ul>
@@ -578,7 +578,7 @@
               <ul class="footer-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="solutions.html">Solutions</a></li>
+                <li><a href="solutions.php">Solutions</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.php">Contact</a></li>
               </ul>
