--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -147,7 +147,7 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.html">Products</a>
+              <a href="solutions.php">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
             <li><a href="contact.php">Contact</a></li>
@@ -178,7 +178,7 @@
               >
               <a
                 style="opacity: inherit;"
-                href="solutions.html"
+                href="solutions.php"
                 class="site-btn sb-dark"
                 >Products</a
               >
@@ -565,7 +565,7 @@
             <ul class="footer-menu text-center">
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
-              <li><a href="solutions.html">Products</a></li>
+              <li><a href="solutions.php">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
               <li><a href="contact.php">Contact</a></li>
             </ul>
