--- a/industryinc/radiator.html
+++ b/industryinc/radiator.html
@@ -134,7 +134,7 @@
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.html">Products</a>
+              <a href="solutions.php">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
             <li><a href="contact.php">Contact</a></li>
@@ -181,7 +181,7 @@
             <ul class="footer-menu text-center">
               <li><a href="index.html">Home</a></li>
               <li class="active"><a href="about.html">About us</a></li>
-              <li><a href="solutions.html">Products</a></li>
+              <li><a href="solutions.php">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
               <li><a href="contact.php">Contact</a></li>
             </ul>
