--- a/industryinc/coorporate_office.html
+++ b/industryinc/coorporate_office.html
@@ -134,10 +134,10 @@
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.php">Products</a>
+              <a href="solutions.html">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
-            <li><a href="contact.php">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -181,9 +181,9 @@
             <ul class="footer-menu text-center">
               <li><a href="index.html">Home</a></li>
               <li class="active"><a href="about.html">About us</a></li>
-              <li><a href="solutions.php">Products</a></li>
+              <li><a href="solutions.html">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
-              <li><a href="contact.php">Contact</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
