--- a/industryinc/elements.html
+++ b/industryinc/elements.html
@@ -82,13 +82,13 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.php">Solutions</a>
+              <a href="solutions.html">Solutions</a>
               <ul class="sub-menu">
                 <li><a href="elements.html">Elements</a></li>
               </ul>
             </li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.php">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -578,9 +578,9 @@
               <ul class="footer-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="solutions.php">Solutions</a></li>
+                <li><a href="solutions.html">Solutions</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.php">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
