--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -147,10 +147,10 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.php">Products</a>
+              <a href="solutions.html">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
-            <li><a href="contact.php">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -178,7 +178,7 @@
               >
               <a
                 style="opacity: inherit;"
-                href="solutions.php"
+                href="solutions.html"
                 class="site-btn sb-dark"
                 >Products</a
               >
@@ -506,7 +506,7 @@
             <h2>We produce or supply Goods, Services, or Sources</h2>
           </div>
           <div class="col-lg-3 text-lg-right">
-            <a href="contact.php#contact-form" class="site-btn sb-dark"
+            <a href="contact.html#contact-form" class="site-btn sb-dark"
               >contact us</a
             >
           </div>
@@ -542,7 +542,9 @@
                   </div>
                 </div>
               </div>
-              <a href="contact.php#contact-form" class="site-btn">contact us</a>
+              <a href="contact.html#contact-form" class="site-btn"
+                >contact us</a
+              >
             </div>
           </div>
           <div class="col-lg-6">
@@ -565,9 +567,9 @@
             <ul class="footer-menu text-center">
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
-              <li><a href="solutions.php">Products</a></li>
+              <li><a href="solutions.html">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
-              <li><a href="contact.php">Contact</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
