--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
-    <link href="img/logo_saswad.png" rel="shortcut icon" />
+    <link href="img/logo_saswadn.png" rel="shortcut icon" />
 
     <!-- Google font -->
     <link
@@ -121,16 +121,6 @@
         opacity: 0.5;
         z-index: 1;
       }
-
-      @media (pointer: coarse) and (hover: none) {
-        .header {
-          background: url("https://source.unsplash.com/XT5OInaElMw/1600x900")
-            black no-repeat center center scroll;
-        }
-        .header video {
-          display: none;
-        }
-      }
     </style>
   </head>
   <body>
@@ -158,9 +148,7 @@
         <!-- Logo -->
         <a href="index.html" class="site-logo">
           <img src="img/logo_saswad.png" height="80" alt="" />
-          <span style="color: black; font-size: large; font-weight: bolder;"
-            >Saaswad Heat Transfers Pvt Ltd</span
-          >
+
           <!-- <span style="color: black;">Saaswad</span> -->
         </a>
         <div class="header-right">
