--- a/industryinc/contact.html
+++ b/industryinc/contact.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Favicon -->
-	<link href="img/logo_saswad.png" rel="shortcut icon" />
+	<link href="img/logo_saswadn.png" rel="shortcut icon" />
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i&display=swap" rel="stylesheet">
@@ -111,7 +111,7 @@
 			<!-- Logo -->
 			<a href="index.html" class="site-logo">
 				<img src="img/logo_saswad.png" height="80" alt="" />
-				<span style="color: black; font-size: large; font-weight: bolder;">Saaswad Heat Transfers Pvt Ltd</span>
+				
 				<!-- <span style="color: black;">Saaswad</span> -->
 			</a>
 			<div class="header-right">
