--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -12,7 +12,7 @@
     ></script>
 
     <!-- Favicon -->
-    <link href="img/logo_saswad.png" rel="shortcut icon" />
+    <link href="img/logo_saswadn.png" rel="shortcut icon" />
 
     <!-- Google font -->
     <link
@@ -113,9 +113,7 @@
         <!-- Logo -->
         <a href="index.html" class="site-logo">
           <img src="img/logo_saswad.png" height="80" alt="" />
-          <span style="color: black; font-size: large; font-weight: bolder;"
-            >Saaswad Heat Transfers Pvt Ltd</span
-          >
+
           <!-- <span style="color: black;">Saaswad</span> -->
         </a>
         <div class="header-right">
