--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -328,7 +328,7 @@
     <!-- About section end -->
 
     <!-- Milestones section -->
-    <section
+    <!-- <section
       class="milestones-section set-bg"
       data-setbg="img/milestones-bg.jpg"
     >
@@ -342,7 +342,7 @@
               <div class="milestone-text">
                 <span>Tenders</span>
                 <h2>1,130</h2>
-                <!-- <p>Nam ornare ipsum</p> -->
+                <p>Nam ornare ipsum</p>
               </div>
             </div>
           </div>
@@ -354,7 +354,7 @@
               <div class="milestone-text">
                 <span>Years of Experience​</span>
                 <h2>31</h2>
-                <!-- <p>Nam ornare ipsum</p> -->
+                <p>Nam ornare ipsum</p>
               </div>
             </div>
           </div>
@@ -368,7 +368,7 @@
                 <h2>
                   1,000
                 </h2>
-                <!-- <p>Nam ornare ipsum</p> -->
+                <p>Nam ornare ipsum</p>
               </div>
             </div>
           </div>
@@ -382,13 +382,13 @@
                 <h2>
                   21
                 </h2>
-                <!-- <p>Nam ornare ipsum</p> -->
+                <p>Nam ornare ipsum</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Milestones section end -->
 
     <!-- Team section -->
@@ -400,8 +400,14 @@
           </div>
           <div class="col-lg-6">
             <div class="about-text">
-              <h2 style="font-weight: bolder;">Director's Remarks</h2>
-              <p style="font-size: 1.5rem;">
+              <h2 style="font-weight: bolder;">Managing Director's Remarks</h2>
+              <p
+                style="
+                  font-size: 1.5rem;
+                  font-family: Cambria, Cochin, Georgia, Times,
+                    'Times New Roman', serif;
+                "
+              >
                 " WE WANT TO GROW AND LOOK TO DEVELOP NEW PRODUCTS TO MEET
                 DOMESTIC AS WELL AS INTERNATIONAL MARKETS. WE ARE READY TO SERVE
                 OUR CUSTOMERS WITH WORLD-CLASS PRODUCTS "
