--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -230,9 +230,9 @@
             <div class="col-lg-6 col-md-6 text-center">
               <div class="service-item">
                 <div class="si-head">
-                  <!-- <div class="si-icon">
-                    <img src="img/icons/cogwheel.png" alt="" />
-                  </div> -->
+                  <!-- <div class="si-icon"> -->
+                  <img src="img/newimage5.JPG" alt="" height="200px" />
+                  <!-- </div> -->
                   <h5>Industrial Radiators</h5>
                 </div>
                 <p>
@@ -243,9 +243,9 @@
             <div class="col-lg-6 col-md-6 text-center">
               <div class="service-item">
                 <div class="si-head">
-                  <!-- <div class="si-icon">
-                    <img src="img/icons/helmet.png" alt="" />
-                  </div> -->
+                  <!-- <div class="si-icon"> -->
+                  <img src="img/newimage8.png" alt="" height="200px" />
+                  <!-- </div> -->
                   <h5>Oil Coolers</h5>
                 </div>
                 <p>
@@ -256,9 +256,9 @@
             <div class="col-lg-6 col-md-6 text-center">
               <div class="service-item">
                 <div class="si-head">
-                  <!-- <div class="si-icon">
-                    <img src="img/icons/wind-engine.png" alt="" />
-                  </div> -->
+                  <!-- <div class="si-icon"> -->
+                  <img src="img/newimage1.JPG" alt="" height="200px" />
+                  <!-- </div> -->
                   <h5>Heat Exchangers</h5>
                 </div>
                 <p>
@@ -269,9 +269,9 @@
             <div class="col-lg-6 col-md-6 text-center">
               <div class="service-item">
                 <div class="si-head">
-                  <!-- <div class="si-icon">
-                    <img src="img/icons/pollution.png" alt="" />
-                  </div> -->
+                  <!-- <div class="si-icon"> -->
+                  <img src="img/KPC 709.png" alt="" height="200px" />
+                  <!-- </div> -->
                   <h5>Charged Air Coolers</h5>
                 </div>
                 <p>
