--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -218,10 +218,10 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.html">Products</a>
+              <a href="solutions.php">Products</a>
             </li>
             <li class="active"><a href="blog.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -756,7 +756,7 @@
             <h2>We produce or supply Goods, Services, or Sources</h2>
           </div>
           <div class="col-lg-3 text-lg-right">
-            <a href="contact.html#contact-form" class="site-btn sb-dark"
+            <a href="contact.php#contact-form" class="site-btn sb-dark"
               >contact us</a
             >
           </div>
@@ -773,9 +773,9 @@
             <ul class="footer-menu text-center">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
-              <li><a href="solutions.html">Products</a></li>
+              <li><a href="solutions.php">Products</a></li>
               <li class="active"><a href="blog.html">Facilities</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
         </div>
