--- a/industryinc/radiator.html
+++ b/industryinc/radiator.html
@@ -132,10 +132,10 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.html">Products</a>
+              <a href="solutions.php">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -187,9 +187,12 @@
                     'Times New Roman', serif;
                 "
               >
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel
-                neque deserunt cupiditate fugiat possimus eligendi est repellat
-                suscipit praesentium pariatur.
+                With required emission specifications,we at SAASWAD produce
+                radiators that are most efficient for a compact frontal area. We
+                have proven results for non automotive applications. > Material:
+                Aluminum & Copper Brass > Design Types Fin & Tube/Bar & Plate
+                Equipment: Industrial Power Generation Engines :125 KVA to 1250
+                KVA Locomotive Engine : 1350 HP TO 4500 HP Radiators
               </p>
               <div class="about-sign">
                 <!-- <div class="sign">
@@ -214,9 +217,9 @@
             <ul class="footer-menu text-center">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
-              <li><a href="solutions.html">Products</a></li>
+              <li><a href="solutions.php">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
         </div>
