--- a/industryinc/acooler.html
+++ b/industryinc/acooler.html
@@ -132,10 +132,10 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.html">Products</a>
+              <a href="solutions.php">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -189,9 +189,15 @@
                     'Times New Roman', serif;
                 "
               >
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel
-                neque deserunt cupiditate fugiat possimus eligendi est repellat
-                suscipit praesentium pariatur.
+                We at SAASWAD make oil coolers of aluminium in a controlled
+                brazing atmosphere. They efficiently and economically reduce
+                high oil and fuel temperature because of the way they are made.
+                The designs we provide are compact , lightweight, high
+                performance with high cooling under demanding engine conditions
+                > Material: Aluminum > Design Types: Fin & Tube / Bar & Plate >
+                Off-Road / Construction Equipment: Backhoe Loaders, Dumpers,
+                Dozers and Concrete Mixtures etc. > Industrial Power Generation
+                Engines: 250 KVA - 2000 KVA
               </p>
               <div class="about-sign">
                 <!-- <div class="sign">
@@ -216,9 +222,9 @@
             <ul class="footer-menu text-center">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
-              <li><a href="solutions.html">Products</a></li>
+              <li><a href="solutions.php">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
         </div>
