--- a/industryinc/mradiator.html
+++ b/industryinc/mradiator.html
@@ -132,10 +132,10 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.html">Products</a>
+              <a href="solutions.php">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -189,9 +189,20 @@
                     'Times New Roman', serif;
                 "
               >
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel
-                neque deserunt cupiditate fugiat possimus eligendi est repellat
-                suscipit praesentium pariatur.
+                We at SAASWAD have proven capabilities and expertise to provide
+                customized engine cooling systems that consist of multiple heat
+                exchangers and auxiliary components such as tan shrouds,
+                re-circulation shields, and DE Beration tanks. The designs we
+                provide have multiple mounting options to meet diverse engine
+                types and performance parameters and can be directly installed
+                on the engine assembly lines. The custom manufactured engine
+                cooling systems include all components, as listed below, needed
+                to install and connect the heat exchanger to respective engines
+                Drive kit with premium belts, pulleys, and stub shaft > Pipe kit
+                with custom-formed pipes to interface with engine specifications
+                > Radiator base designed to interface with specific engine rail
+                > Optional galvanized steel and heat exchanger coatings for
+                enhanced corrosion protection
               </p>
               <div class="about-sign">
                 <!-- <div class="sign">
@@ -216,9 +227,9 @@
             <ul class="footer-menu text-center">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
-              <li><a href="solutions.html">Products</a></li>
+              <li><a href="solutions.php">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
         </div>
