--- a/industryinc/tacooler.html
+++ b/industryinc/tacooler.html
@@ -132,10 +132,10 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.html">Products</a>
+              <a href="solutions.php">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.php">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -187,9 +187,15 @@
                     'Times New Roman', serif;
                 "
               >
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel
-                neque deserunt cupiditate fugiat possimus eligendi est repellat
-                suscipit praesentium pariatur.
+                SAASWAD’S range of Charge air coolers (CAC) or Intercoolers/
+                After coolers have proved very successful in cooling engine
+                intake of air for increased power, improved fuel economy and
+                emission . The CACS manufactured at SAASWAD with controlled
+                atmosphere brazing processes are available in following
+                categories :- > Material: Aluminum > Design Types: Fin & Tube /
+                Bar & Plate > Off-Road / Construction Equipment Backhoe Loaders,
+                Dumpers, Dozers and Concrete Mixtures etc. Industrial Power
+                Generation Engines: 75 KVA-1010 KVA
               </p>
               <div class="about-sign">
                 <!-- <div class="sign">
@@ -214,9 +220,9 @@
             <ul class="footer-menu text-center">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
-              <li><a href="solutions.html">Products</a></li>
+              <li><a href="solutions.php">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.php">Contact</a></li>
             </ul>
           </div>
         </div>
