--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -391,16 +391,19 @@
         <div class="row">
           <div class="col-lg-4">
             <ul class="nav nav-tabs reserch-tab-menu" role="tablist">
+              <h2 style="color: white;">
+                <center>MANUFACTURING FACILITIES</center>
+              </h2>
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link"
                   data-toggle="tab"
                   href="#tab-1"
                   role="tab"
                   aria-controls="tab-1"
-                  aria-selected="true"
-                  >PUNCHING MACHINE
-                </a>
+                  aria-selected="false"
+                  >BENDING MACHINE</a
+                >
               </li>
               <li class="nav-item">
                 <a
@@ -410,7 +413,7 @@
                   role="tab"
                   aria-controls="tab-2"
                   aria-selected="false"
-                  >BENDING MACHINE</a
+                  >CNC_BLENDER_TUBE</a
                 >
               </li>
               <li class="nav-item">
@@ -421,7 +424,7 @@
                   role="tab"
                   aria-controls="tab-3"
                   aria-selected="false"
-                  >CNC_BLENDER_TUBE</a
+                  >SHEARING MACHINE</a
                 >
               </li>
               <li class="nav-item">
@@ -432,7 +435,7 @@
                   role="tab"
                   aria-controls="tab-4"
                   aria-selected="false"
-                  >SHEARING MACHINE</a
+                  >CNC_VERTICAL_MACHINE</a
                 >
               </li>
               <li class="nav-item">
@@ -442,17 +445,6 @@
                   href="#tab-5"
                   role="tab"
                   aria-controls="tab-5"
-                  aria-selected="false"
-                  >CNC_VERTICAL_MACHINE</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  data-toggle="tab"
-                  href="#tab-6"
-                  role="tab"
-                  aria-controls="tab-6"
                   aria-selected="false"
                   >OVEN</a
                 >
@@ -468,6 +460,19 @@
                 >POWDER COATING</a
               >
             </li> -->
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  data-toggle="tab"
+                  href="#tab-6"
+                  role="tab"
+                  aria-controls="tab-6"
+                  aria-selected="true"
+                  >PUNCHING MACHINE
+                </a>
+              </li>
+
+              <h2 style="color: white;"><center>TESTING FACILITIES</center></h2>
               <li class="nav-item">
                 <a
                   class="nav-link"
@@ -546,9 +551,9 @@
                 aria-labelledby="tab-1"
               >
                 <h2>
-                  PUNCHING MACHINE
+                  BENDING MACHINE
                 </h2>
-                <img src="img/punching_machine.jpg" alt="" width="500" />
+                <img src="img/bending_machine.jpg" alt="" width="500" />
               </div>
               <div
                 class="tab-pane fade"
@@ -557,9 +562,9 @@
                 aria-labelledby="tab-2"
               >
                 <h2>
-                  BENDING MACHINE
+                  CNC_BLENDER_TUBE
                 </h2>
-                <img src="img/bending_machine.jpg" alt="" width="500" />
+                <img src="img/cnc_blender_tube.jpg" alt="" width="500" />
               </div>
               <div
                 class="tab-pane fade"
@@ -568,9 +573,9 @@
                 aria-labelledby="tab-3"
               >
                 <h2>
-                  CNC_BLENDER_TUBE
+                  SHEARING MACHINE
                 </h2>
-                <img src="img/cnc_blender_tube.jpg" alt="" width="500" />
+                <img src="img/shearing_machine.jpg" alt="" width="600" />
               </div>
               <div
                 class="tab-pane fade"
@@ -579,9 +584,9 @@
                 aria-labelledby="tab-4"
               >
                 <h2>
-                  SHEARING MACHINE
+                  CNC_VERTICAL_MACHINE
                 </h2>
-                <img src="img/shearing_machine.jpg" alt="" width="600" />
+                <img src="img/cnc_vertical_machine.jpg" alt="" width="600" />
               </div>
               <div
                 class="tab-pane fade"
@@ -590,9 +595,9 @@
                 aria-labelledby="tab-5"
               >
                 <h2>
-                  CNC_VERTICAL_MACHINE
+                  OVEN
                 </h2>
-                <img src="img/cnc_vertical_machine.jpg" alt="" width="600" />
+                <img src="img/oven.jpg" alt="" width="500" />
               </div>
               <div
                 class="tab-pane fade"
@@ -601,9 +606,9 @@
                 aria-labelledby="tab-6"
               >
                 <h2>
-                  OVEN
+                  PUNCHING MACHINE
                 </h2>
-                <img src="img/oven.jpg" alt="" width="500" />
+                <img src="img/punching_machine.jpg" alt="" width="500" />
               </div>
               <div
                 class="tab-pane fade"
@@ -682,25 +687,6 @@
     <!-- Blog section end  -->
     <section id="mission" class="team-section spad">
       <div class="container">
-        <!-- <div class="team-text">
-          <h2 style="font-weight: bolder;">
-            Our <span style="color: red;">Vision</span>,<span
-              style="color: red;"
-            >
-              Mission</span
-            >
-            and
-            <span style="color: red;">Goal</span>
-          </h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-            orci purus, sodales in est quis, blandit sollicitudin est. Nam
-            ornare ipsum ac accumsan auctor. Donec consequat arcu et commodo
-            interdum. Vivamus posuere lorem lacus.Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Quisque orci purus, sodales in est
-            quis, blandit sollicitudin est.
-          </p>
-        </div> -->
         <div class="row">
           <div class="col-md-4">
             <div class="team-member">
