--- a/industryinc/tacooler.html
+++ b/industryinc/tacooler.html
@@ -34,6 +34,12 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
+      .hover1:hover {
+        color: white;
+      }
+      .hover1 {
+        color: #718090;
+      }
       #scroll {
         z-index: 999;
         position: fixed;
@@ -182,7 +188,7 @@
               <h2 style="font-weight: bolder;">Turbo After Cooler</h2>
               <p
                 style="
-                  font-size: 1.5rem;
+                  font-size: 1.25rem;
                   font-family: Cambria, Cochin, Georgia, Times,
                     'Times New Roman', serif;
                 "
@@ -192,10 +198,10 @@
                 intake of air for increased power, improved fuel economy and
                 emission . The CACS manufactured at SAASWAD with controlled
                 atmosphere brazing processes are available in following
-                categories :- > Material: Aluminum > Design Types: Fin & Tube /
-                Bar & Plate > Off-Road / Construction Equipment Backhoe Loaders,
-                Dumpers, Dozers and Concrete Mixtures etc. Industrial Power
-                Generation Engines: 75 KVA-1010 KVA
+                categories :- <br />> Material: Aluminum <br />> Design Types:
+                Fin & Tube / Bar & Plate <br />> Off-Road / Construction
+                Equipment Backhoe Loaders, Dumpers, Dozers and Concrete Mixtures
+                etc. Industrial Power Generation Engines: 75 KVA-1010 KVA
               </p>
               <div class="about-sign">
                 <!-- <div class="sign">
@@ -250,7 +256,9 @@
                 expertise and after-sales service to our customers.
               </p>
               <div class="footer-social">
-                <a href=""><i class="fa fa-envelope"></i></a>
+                <a href="mailto: info@saaswad.com"
+                  ><i class="fa fa-envelope"></i
+                ></a>
                 <a href=""><i class="fa fa-google"></i></a>
                 <!-- <a href=""><i class="fa fa-dribbble"></i></a>
                 <a href=""><i class="fa fa-behance"></i></a> -->
@@ -262,22 +270,20 @@
               <h2 class="fw-title">Our Products</h2>
               <ul>
                 <li>
-                  <a href="./radiator.html" style="color: #718090;">
-                    Radiators</a
-                  >
+                  <a class="hover1" href="./radiator.html"> Radiators</a>
                 </li>
                 <li>
-                  <a href="./mradiator.html" style="color: #718090;"
+                  <a class="hover1" href="./mradiator.html"
                     >Mechanically Bonded Radiators</a
                   >
                 </li>
                 <li>
-                  <a href="./acooler.html" style="color: #718090;"
+                  <a class="hover1" href="./acooler.html"
                     >Radiator, Oil cooler and AfterCoolers Assembly</a
                   >
                 </li>
                 <li>
-                  <a href="./tacooler.html" style="color: #718090;"
+                  <a class="hover1" href="./tacooler.html"
                     >Turbo After Cooler</a
                   >
                 </li>
@@ -348,7 +354,9 @@
             <div class="col-lg-7 order-1 order-lg-2 p-0">
               <ul class="footer-menu">
                 <li>
-                  <a href="http://technoborg.in/">Made By - Team Technoborg</a>
+                  <a class="hover1" href="http://technoborg.in/"
+                    >Team Technoborg</a
+                  >
                 </li>
               </ul>
             </div>
