--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -712,7 +712,7 @@
                 <p style="font-size: 1rem;">
                   Varanasi, India
                 </p>
-                <a href="./unit3.html" class="site-btn">Know More</a>
+                <a href="unit3.html" class="site-btn">Know More</a>
               </div>
             </div>
           </div>
