--- a/industryinc/unit4.html
+++ b/industryinc/unit4.html
@@ -130,7 +130,7 @@
         <nav class="site-nav-menu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="about.html">About us</a></li>
+            <li ><a href="about.html">About us</a></li>
             <li>
               <a href="solutions.php">Products</a>
             </li>
@@ -171,10 +171,12 @@
         </div>
       </div>
     </section>
-
+    <br>
+    <br>
     <h3 style="margin-bottom: 20px;">
       <center>UNIT 4</center>
     </h3>
+    <br>
     <div class="map-section">
       <div class="container">
         <div class="map-info">
