--- a/industryinc/unit3.html
+++ b/industryinc/unit3.html
@@ -73,6 +73,8 @@
         background-position: center;
         border: 1px solid;
       }
+      
+  
     </style>
   </head>
   <body>
@@ -130,7 +132,7 @@
         <nav class="site-nav-menu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="about.html">About us</a></li>
+            <li ><a href="about.html">About us</a></li>
             <li>
               <a href="solutions.php">Products</a>
             </li>
@@ -157,23 +159,26 @@
       background-repeat: no-repeat;
     "
   >
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-7">
-            <h2>UNIT 3</h2>
-            <!-- <p>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-             orci purus, sodales in est quis, blandit sollicitudin est. Nam
-             ornare ipsum ac accumsan auctor.
-           </p> -->
-            <a href="contact.html#contact-form" >Contact US</a>
-          </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7">
+          <h2>UNIT 3</h2>
+          <!-- <p>
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+           orci purus, sodales in est quis, blandit sollicitudin est. Nam
+           ornare ipsum ac accumsan auctor.
+         </p> -->
+          <a href="contact.html#contact-form" class="site-btn">Contact US</a>
         </div>
       </div>
-    </section>
-    <h3 style="margin-bottom: 20px;">
+    </div>
+  </section>
+    <br>
+    <br>
+    <h3 style="margin-bottom: 20px; " >
       <center>UNIT 3</center>
     </h3>
+    <br>
     <div class="map-section">
       <div class="container">
         <div class="map-info">
@@ -226,6 +231,21 @@
         </div>
       </div>
     </div>
+    <br>
+    <br>
+
+   <!-- <center> <h3>Find out more about us</h3> </center>
+   <br>
+   <center>
+    <!-- <a href="something" class="button4" style="background-color:#f14e4e">Button 1</a>
+    <a href="something" class="button4" style="background-color:#f1bb4e">Button 2</a> -->
+    <!-- <a href="index.html" data-role="button" data-inline="true" style="background-color: red;">Cancel</a>
+<a href="index.html" data-role="button" data-inline="true" data-theme="red">Save</a>
+  </div>
+</center>
+   
+   <br> --> -->
+
     <!-- Page top section end  -->
 
     <!-- Footer section -->
