--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -395,12 +395,12 @@
         <div class="row">
           <div class="col-lg-4">
             <ul class="nav nav-tabs reserch-tab-menu" role="tablist">
-              <h2 style="color: white;">
+              <h2 style="color: white; margin-bottom: 20px;">
                 <center>MANUFACTURING FACILITIES</center>
               </h2>
               <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link active"
                   data-toggle="tab"
                   href="#tab-1"
                   role="tab"
@@ -466,7 +466,7 @@
             </li> -->
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link"
                   data-toggle="tab"
                   href="#tab-6"
                   role="tab"
@@ -475,8 +475,153 @@
                   >PUNCHING MACHINE
                 </a>
               </li>
-
-              <h2 style="color: white;"><center>TESTING FACILITIES</center></h2>
+            </ul>
+          </div>
+          <div class="col-lg-4" style="text-align: center;">
+            <div class="tab-content reserch-tab">
+              <!-- single tab content -->
+              <div
+                class="tab-pane fade show active"
+                id="tab-1"
+                role="tabpanel"
+                aria-labelledby="tab-1"
+              >
+                <h2 style="margin-bottom: 100px;">
+                  BENDING MACHINE
+                </h2>
+                <img src="img/bending_machine.jpg" alt="" width="500" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="tab-2"
+                role="tabpanel"
+                aria-labelledby="tab-2"
+              >
+                <h2 style="margin-bottom: 100px;">
+                  CNC_BLENDER_TUBE
+                </h2>
+                <img src="img/cnc_blender_tube.jpg" alt="" width="500" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="tab-3"
+                role="tabpanel"
+                aria-labelledby="tab-3"
+              >
+                <h2 style="margin-bottom: 100px;">
+                  SHEARING MACHINE
+                </h2>
+                <img src="img/shearing_machine.jpg" alt="" width="600" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="tab-4"
+                role="tabpanel"
+                aria-labelledby="tab-4"
+              >
+                <h2 style="margin-bottom: 100px;">
+                  CNC_V_MACHINE
+                </h2>
+                <img src="img/cnc_vertical_machine.jpg" alt="" width="600" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="tab-5"
+                role="tabpanel"
+                aria-labelledby="tab-5"
+              >
+                <h2 style="margin-bottom: 100px;">
+                  OVEN
+                </h2>
+                <img src="img/oven.jpg" alt="" width="500" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="tab-6"
+                role="tabpanel"
+                aria-labelledby="tab-6"
+              >
+                <h2>
+                  PUNCHING MACHINE
+                </h2>
+                <img src="img/punching_machine.jpg" alt="" width="500" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="tab-7"
+                role="tabpanel"
+                aria-labelledby="tab-7"
+              >
+                <h2 style="margin-bottom: 50px;">
+                  RADIATOR HATCH TEST RIG
+                </h2>
+                <img src="img/facility1.JPG" alt="" width="500" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="tab-8"
+                role="tabpanel"
+                aria-labelledby="tab-8"
+              >
+                <h2 style="margin-bottom: 50px;">
+                  OIL COOLER TEST RIG
+                </h2>
+                <img src="img/facility2.JPG" alt="" width="500" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="tab-9"
+                role="tabpanel"
+                aria-labelledby="tab-9"
+              >
+                <h2 style="margin-bottom: 50px;">
+                  THERMAL CYCLE TEST RIG
+                </h2>
+                <img src="img/facility3.JPG" alt="" width="500" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="tab-10"
+                role="tabpanel"
+                aria-labelledby="tab-10"
+              >
+                <h2 style="margin-bottom: 100px;">
+                  WIND TUNNEL
+                </h2>
+                <img src="img/facility4.JPG" alt="" width="500" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="tab-11"
+                role="tabpanel"
+                aria-labelledby="tab-11"
+              >
+                <h2 style="margin-bottom: 100px;">
+                  SALT SPRAY TEST
+                </h2>
+                <img src="img/facility5.JPG" alt="" width="500" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="tab-12"
+                role="tabpanel"
+                aria-labelledby="tab-12"
+              >
+                <h2>
+                  ADDITIONAL FACILITIES
+                </h2>
+                <img src="img/facility6.JPG" alt="" width="300" />
+                <img src="img/facility7.JPG" alt="" width="300" />
+                <img src="img/facility8.JPG" alt="" width="300" />
+                <img src="img/facility9.JPG" alt="" width="3 00" />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <ul class="nav nav-tabs reserch-tab-menu" role="tablist">
+              <h2 style="color: white; margin-bottom: 60px;">
+                <center>TESTING FACILITIES</center>
+              </h2>
               <li class="nav-item">
                 <a
                   class="nav-link"
@@ -544,146 +689,6 @@
                 >
               </li>
             </ul>
-          </div>
-          <div class="col-lg-8">
-            <div class="tab-content reserch-tab">
-              <!-- single tab content -->
-              <div
-                class="tab-pane fade show active"
-                id="tab-1"
-                role="tabpanel"
-                aria-labelledby="tab-1"
-              >
-                <h2>
-                  BENDING MACHINE
-                </h2>
-                <img src="img/bending_machine.jpg" alt="" width="500" />
-              </div>
-              <div
-                class="tab-pane fade"
-                id="tab-2"
-                role="tabpanel"
-                aria-labelledby="tab-2"
-              >
-                <h2>
-                  CNC_BLENDER_TUBE
-                </h2>
-                <img src="img/cnc_blender_tube.jpg" alt="" width="500" />
-              </div>
-              <div
-                class="tab-pane fade"
-                id="tab-3"
-                role="tabpanel"
-                aria-labelledby="tab-3"
-              >
-                <h2>
-                  SHEARING MACHINE
-                </h2>
-                <img src="img/shearing_machine.jpg" alt="" width="600" />
-              </div>
-              <div
-                class="tab-pane fade"
-                id="tab-4"
-                role="tabpanel"
-                aria-labelledby="tab-4"
-              >
-                <h2>
-                  CNC_VERTICAL_MACHINE
-                </h2>
-                <img src="img/cnc_vertical_machine.jpg" alt="" width="600" />
-              </div>
-              <div
-                class="tab-pane fade"
-                id="tab-5"
-                role="tabpanel"
-                aria-labelledby="tab-5"
-              >
-                <h2>
-                  OVEN
-                </h2>
-                <img src="img/oven.jpg" alt="" width="500" />
-              </div>
-              <div
-                class="tab-pane fade"
-                id="tab-6"
-                role="tabpanel"
-                aria-labelledby="tab-6"
-              >
-                <h2>
-                  PUNCHING MACHINE
-                </h2>
-                <img src="img/punching_machine.jpg" alt="" width="500" />
-              </div>
-              <div
-                class="tab-pane fade"
-                id="tab-7"
-                role="tabpanel"
-                aria-labelledby="tab-7"
-              >
-                <h2>
-                  RADIATOR HATCH TEST RIG
-                </h2>
-                <img src="img/facility1.JPG" alt="" width="500" />
-              </div>
-              <div
-                class="tab-pane fade"
-                id="tab-8"
-                role="tabpanel"
-                aria-labelledby="tab-8"
-              >
-                <h2>
-                  OIL COOLER TEST RIG
-                </h2>
-                <img src="img/facility2.JPG" alt="" width="500" />
-              </div>
-              <div
-                class="tab-pane fade"
-                id="tab-9"
-                role="tabpanel"
-                aria-labelledby="tab-9"
-              >
-                <h2>
-                  THERMAL CYCLE TEST RIG
-                </h2>
-                <img src="img/facility3.JPG" alt="" width="500" />
-              </div>
-              <div
-                class="tab-pane fade"
-                id="tab-10"
-                role="tabpanel"
-                aria-labelledby="tab-10"
-              >
-                <h2>
-                  WIND TUNNEL
-                </h2>
-                <img src="img/facility4.JPG" alt="" width="500" />
-              </div>
-              <div
-                class="tab-pane fade"
-                id="tab-11"
-                role="tabpanel"
-                aria-labelledby="tab-11"
-              >
-                <h2>
-                  SALT SPRAY TEST
-                </h2>
-                <img src="img/facility5.JPG" alt="" width="500" />
-              </div>
-              <div
-                class="tab-pane fade"
-                id="tab-12"
-                role="tabpanel"
-                aria-labelledby="tab-12"
-              >
-                <h2>
-                  ADDITIONAL FACILITIES
-                </h2>
-                <img src="img/facility6.JPG" alt="" width="300" />
-                <img src="img/facility7.JPG" alt="" width="300" />
-                <img src="img/facility8.JPG" alt="" width="300" />
-                <img src="img/facility9.JPG" alt="" width="3 00" />
-              </div>
-            </div>
           </div>
         </div>
       </div>
